--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,9 @@
 {
     "manifest_version": 2,
 
-    "name": "Getting started example",
-    "description": "This extension shows a Google Image search result for the current page",
-    "version": "1.0",
-
-    "browser_action": {
-        "default_icon": "icon.png",
-        "default_popup": "popup.html",
-        "default_title": "Click here!"
-    },
+    "name": "fitbit-activity-csv",
+    "description": "Inject Fitbit activity history in CSV format in the JavaScript console",
+    "version": "0.1",
 
     "permissions": [],
 
